--- a/frontZetta/src/app/components/cargo/cargo.component.html
+++ b/frontZetta/src/app/components/cargo/cargo.component.html
@@ -1,1 +1,69 @@
-<p>cargo works!</p>
+<app-menu></app-menu>
+<h1 style="font-weight:normal" class="titulo">Cadastro de cargo</h1>
+<hr class="linha"/>
+<div class="ui-g">
+  <div>
+    <button
+      pButton type="button" label="Adicionar"  (click)="adicionar()" class="botaoAdicionar"
+    ></button>
+  </div>
+
+  <div class="ui-g-10 ui-sm-12 tabela" >
+    <div class="ui-g-12 ui-sm-12">
+      <p-table [value]="listaItens" [paginator]="true"  [rows]="15"  responsive="true"  [rowsPerPageOptions]="[15, 30, 60]"
+      >
+        <ng-template pTemplate="header">
+          <tr>
+            <th class="tb-item-cabecario-data ; " style="width: 400px;"
+            > Descrição            </th>
+            <!-- <th class="tb-item-cabecario-cod ; " style="width: 20px;"
+            > E/S
+            </th>
+            <th class="tb-item-cabecario-cod ; " style="width: 80px;"
+            > Local Estoque
+            </th>
+            <th class="tb-item-cabecario-cod ; " style="width: 45px;"
+            > Código
+            </th>
+            <th class="tb-item-cabecario-desc ; " style="width: 300px;"
+            > Desc. Item
+            </th>
+            <th class="tb-item-cabecario-cod ; " style="width: 60px;"
+            > Nº Serie
+            </th>
+            <th class="tb-item-cabecario-qdte ; " style="width: 35px;"
+            > Qtde
+            </th> -->
+            <th class="tb-item-cabecario-cod ; " style="width: 70px;"
+            > Opções
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-t>
+          <tr>
+            <td class="tb-coluna-align-centro; "> {{ t.nome }}
+            </td>
+            <!-- <td class="tb-coluna-align-centro; "> {{ t.tipo }}
+            </td>
+            <td class="tb-coluna-align-centro; "> {{ t.localEstoque.descricao }}
+            </td>
+            <td class="tb-coluna-align-centro; "> {{ t.item.codigo }}
+            </td>
+            <td class="tb-coluna-align-centro; "> {{ t.item.descricao }}
+            </td>
+            <td class="tb-coluna-align-centro; "> {{ t.numSerie }}
+            </td>
+            <td class="tb-coluna-align-centro; "> {{ t.quantidade }} -->
+            <!-- </td> -->
+            <td class="tb-coluna-opcoes">
+              <button class="btn-tabela" (click)="editar(t.id)" pButton icon="fas fa-pen"
+                  pTooltip="Editar" tooltipPosition="top"></button>
+              <button class="btn-tabela" (click)="excluir(t)" pButton icon="fas fa-minus "
+                  pTooltip="Excluir" tooltipPosition="top"></button>
+          </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+  </div>
+</div>
