--- a/frontZetta/src/app/components/cargo/cargo.component.css
+++ b/frontZetta/src/app/components/cargo/cargo.component.css
@@ -1,11 +1,12 @@
 .botaoAdicionar{
   position: relative;
   left: 15px;
+  width: 258px;
 }
 .titulo{
   position: relative;
   left: 15px;
-  top: -10px;
+  top: -8px;
   width: 90%;
 }
 .linha{
@@ -14,9 +15,19 @@
   top: -20px;
 }
 .tabela{
-  width: 86%;
+    width: 78%;
+    position: relative;
+    left: 286px;
+    top: -92px;
+}
+.inputDescricao{
   position: relative;
-  left: 175px;
-  top: -40px;
-
+  left: 15px;
+  top: -8px;
+  width: 260px;
+}
+.labelDescricao{
+  position: relative;
+    top: -38px;
+    left: -242px;
 }
