--- a/frontZetta/src/app/components/menu/menu.component.css
+++ b/frontZetta/src/app/components/menu/menu.component.css
@@ -1,26 +1,26 @@
 .texto1 {
-  font-size: 23px;
+  font-size: 23px !important;
 }
 
 .navbarPersonalizada {
-  background-color: black;
-  color: white;
+  background-color: black !important;
+  color: white !important;
 }
 
 .botaoMenu {
-  position: relative;
-  left: 8px;
-  background-color: black;
-  border-color: black;
+  position: relative !important;
+  left: -98% !important;
+  background-color: black !important;
+  border-color: black !important;
 }
 
 .p-button:enabled:hover {
-  background: #b8b894;
-  color: black;
-  border-color: #b8b894;
+  background: #b8b894 !important;
+  color: black !important;
+  border-color: #b8b894 !important;
 }
 .p-button:enabled:active {
-  background: #b8b894;
-  color: black;
-  border-color: #b8b894;
+  background: #b8b894 !important;
+  color: black !important;
+  border-color: #b8b894 !important;
 }
