--- a/frontZetta/src/app/components/cargo/cargo.component.html
+++ b/frontZetta/src/app/components/cargo/cargo.component.html
@@ -68,9 +68,9 @@
             <td class="tb-coluna-align-centro; "> {{ t.quantidade }} -->
             <!-- </td> -->
             <td class="tb-coluna-opcoes">
-              <button class="btn-tabela" (click)="editar(t.id)" pButton icon="fas fa-pen"
+              <button class="btn-tabela" (click)="editar(t.id)" pButton icon="pi pi-pencil"
                   pTooltip="Editar" tooltipPosition="top"></button>
-              <button class="btn-tabela" (click)="excluir(t)" pButton icon="fas fa-minus "
+              <button class="btn-tabela" (click)="excluir(t)" pButton icon="pi pi-trash"
                   pTooltip="Excluir" tooltipPosition="top"></button>
           </td>
           </tr>
