--- a/frontZetta/src/app/components/pessoa/pessoa.component.html
+++ b/frontZetta/src/app/components/pessoa/pessoa.component.html
@@ -53,7 +53,7 @@
             </td>
             <td class="tb-coluna-align-centro; "> {{ t.cpf }}
             </td>
-            <td class="tb-coluna-align-centro; "> {{ t.dataNascimento }}
+            <td class="tb-coluna-align-centro; "> {{ t.dataNascimento | date:'dd/MM/yyyy'}}
             </td>
             <td class="tb-coluna-opcoes">
               <button class="btn-tabela" (click)="controlaModal(t.id)" pButton icon="pi pi-pencil"
